Create tinder like

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -27,3 +27,5 @@
 @import 'components/text-highlight';
 @import 'components/generic-modal';
 @import 'components/simple-link';
+@import 'components/text-off';
+@import 'components/info-text';
