--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles compress %}
+{% load staticfiles compress projects_tags %}
 
 <!DOCTYPE html>
 <html>
@@ -37,7 +37,7 @@
     {% block extracss %}
     {% endblock extracss %}
   </head>
-  <body>
+  <body {% if request.path|startswith:"/p/" %}class="-white"{% endif %}>
     {% block content %}
     {% endblock content %}
     {% include "components/generic-modal.html" %}
@@ -45,6 +45,8 @@
     {% compress js %}
       <script src="{% static 'django_js_reverse/js/reverse.js' %}"></script>
       <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+      <script src="{% static 'js/components/genericModal/view.js' %}"></script>
+      <script src="{% static 'js/pages/base.js' %}"></script>
       <script src="{% static 'js/utils/publishSubscribe.js' %}"></script>
       <script src="{% static 'js/utils/events.js' %}"></script>
       <script src="{% static 'js/utils/cookies.js' %}"></script>
