--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -5,11 +5,11 @@
   left: 0;
 
   display: none;
+  overflow-y: auto;
 
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding: 1.6rem;
 
   background-color: $color-whitesmoke;
 
@@ -18,9 +18,23 @@
   }
 
   & > .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    box-sizing: border-box;
+    width: 100%;
+    padding: 1.6rem;
+
+    background-color: $color-whitesmoke;
+  }
+
+  & > .header.-shadow {
+    @include header-shadow;
   }
 
   & > .header > .close {
@@ -44,14 +58,27 @@
     justify-content: center;
 
     margin-top: 2rem;
+    padding: 3.2rem 1.6rem 1.6rem 1.6rem;
 
     text-align: center;
+  }
+
+  & > .content.-vote {
+    text-align: left;
   }
 
   & > .content > img,
   & > .content > svg {
     width: 14rem;
     margin: 0 auto;
+  }
+
+  & > .content > .info-text {
+    margin-top: 2rem;
+  }
+
+  & > .content > .info-text:first-child {
+    margin-top: 0;
   }
 
   & > .solid-button {
@@ -62,8 +89,33 @@
     padding: .5rem 2rem;
   }
 
-  & > .simple-link {
+  & .simple-link {
     margin: 0 auto;
     margin-top: 1rem;
+  }
+
+  & > .footer {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 1.6rem;
+
+    background-color: #FFF;
+  }
+
+  & > .footer > .info-text {
+    margin-top: 0;
+  }
+
+  & > .footer > .actions {
+    display: flex;
+    justify-content: space-between;
+
+    margin-top: 1rem;
+  }
+
+  & > .footer > .actions > a {
+    font-size: 1rem;
+
+    padding: .5rem 1rem;
   }
 }
