--- a/src/static/scss/components/_hero-section.scss
+++ b/src/static/scss/components/_hero-section.scss
@@ -1,7 +1,7 @@
 .hero-section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 
   text-align: center;
 }
