--- a/src/static/scss/components/_home-section.scss
+++ b/src/static/scss/components/_home-section.scss
@@ -1,3 +1,11 @@
 .home-section {
+  @include bp-mediumup {
+    display: flex;
+  }
 
+  & > * + * {
+    @include bp-mediumup {
+      margin-left: 2rem;
+    }
+  }
 }
