--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -15,7 +15,7 @@
   </nav>
 </div>
 
-<main class="document-body js-documentBody">
+<main class="document-body js-documentBody" data-selection-enabled="{% if request.user.is_authenticated %}true{% else %}false{% endif %}">
   <div class="header">
     {% if object.document_type %}
     <span class="epigraph">{{ object.document_type.initials }} {{ object.number }}/{{ object.year }}</span>
