Prepare opinion-modal to receive data from js
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/generic-modal.html
+++ b/src/templates/components/generic-modal.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<!-- <div class="generic-modal">
+<div class="generic-modal">
   <div class="header">
     <h2>Modal</h2>
     <div class="close js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
@@ -12,37 +12,4 @@
   </div>
   <a href="#" class="solid-button -green">Próximo</a>
   <a href="#" class="simple-link">Pular tutorial</a>
-</div> -->
-
-<div class="generic-modal -opinion js-opinionModal" data-open-on-load="true">
-  <div class="header js-headerModal">
-    <h2>Você concorda?</h2>
-    <div class="close js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
-  </div>
-  <div class="content -vote">
-    <span class="info-text">
-      <img src="{% static 'img/avatar.png' %}">
-      <h4>Simone destacou o trecho:</h4>
-    </span>
-    <p><b>Art. 1º - </b><span class="text-highlight">As campanhas publicitárias destinadas à venda de produtos de consumo</span><span class="text-off"> ficam proibidas de exibir, em qualquer veículo de comunicação ou propaganda, imagens ou cenas que façam, direta ou indiretamente, apelo erótico ou alusão à sexualidade e à sensualidade feminina.</span></p>
-    <span class="info-text">
-      <img src="{% static 'img/atention.svg' %}">
-      <h4>E deu a seguinte opinião nele:</h4>
-    </span>
-    <p>Acho o texto muito confuso, mesmo para um projeto de lei... hahahaa Quem é o "infrator", citado tantas vezes? A empresa que contratar? A agência que preparar? O veículo que divulgar? Não fica nada claro isso. O problema, na minha avaliação, começa na primeira frase... "as campanhas publicitárias ficam proibidas de exibir"...??? Na verdade, o sujeito deveria vir claro aí já no início do projeto.</p>
-    <p>Acho o texto muito confuso, mesmo para um projeto de lei... hahahaa Quem é o "infrator", citado tantas vezes? A empresa que contratar? A agência que preparar? O veículo que divulgar? Não fica nada claro isso. O problema, na minha avaliação, começa na primeira frase... "as campanhas publicitárias ficam proibidas de exibir"...??? Na verdade, o sujeito deveria vir claro aí já no início do projeto.</p>
-    <p>Acho o texto muito confuso, mesmo para um projeto de lei... hahahaa Quem é o "infrator", citado tantas vezes? A empresa que contratar? A agência que preparar? O veículo que divulgar? Não fica nada claro isso. O problema, na minha avaliação, começa na primeira frase... "as campanhas publicitárias ficam proibidas de exibir"...??? Na verdade, o sujeito deveria vir claro aí já no início do projeto.</p>
-  </div>
-  <div class="footer">
-    <span class="info-text">
-      <img src="{% static 'img/information.svg' %}">
-      <h4>Você concorda com essa opinião?</h4>
-    </span>
-    <div class="actions">
-      <a href="#" class="outline-button -green">Concordo</a>
-      <a href="#" class="outline-button -gray">Neutro</a>
-      <a href="#" class="outline-button -red">Discordo</a>
-    </div>
-    <a href="#" class="simple-link">Pular tutorial</a>
-  </div>
 </div>
