Show random suggestion
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -13,6 +13,12 @@
 
   background-color: $color-whitesmoke;
 
+  &.-opinion {
+    .excerpt {
+      color: $color-grayish;
+    }
+  }
+
   &.-show {
     display: block;
   }
