--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -10,7 +10,7 @@
       <img class="js-userAvatar" src="">
       <h4><span class="js-userName"></span> destacou o trecho:</h4>
     </span>
-    <p class="js-documentExcerpt" data-excerpt-id=""></p>
+    <p class="excerpt js-documentExcerpt" data-excerpt-id=""></p>
     <span class="info-text">
       <img src="{% static 'img/atention.svg' %}">
       <h4>E deu a seguinte opinião nele:</h4>
