--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -23,9 +23,9 @@
       <h4>Você concorda com essa opinião?</h4>
     </span>
     <div class="actions">
-      <a href="#" class="outline-button -green">Concordo</a>
-      <a href="#" class="outline-button -gray">Neutro</a>
-      <a href="#" class="outline-button -red">Discordo</a>
+      <a href="#" class="outline-button -green js-opinionButton" data-opinion="approve">Concordo</a>
+      <a href="#" class="outline-button -gray js-opinionButton" data-opinion="neutral">Neutro</a>
+      <a href="#" class="outline-button -red js-opinionButton" data-opinion="reject">Discordo</a>
     </div>
     <a href="#" class="simple-link">Próxima Opinião</a>
   </div>
