--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -27,6 +27,6 @@
       <a href="#" class="outline-button -gray js-opinionButton" data-opinion="neutral">Neutro</a>
       <a href="#" class="outline-button -red js-opinionButton" data-opinion="reject">Discordo</a>
     </div>
-    <a href="#" class="simple-link">Próxima Opinião</a>
+    <a href="#" class="simple-link js-nextOpinion">Próxima Opinião</a>
   </div>
 </div>
