--- a/src/static/scss/ambience/_typography.scss
+++ b/src/static/scss/ambience/_typography.scss
@@ -1,19 +1,20 @@
 $font-family-body: 'Roboto', sans-serif;
 $font-family-brand: 'Montserrat', sans-serif;
 
-$font-size-mega: 7.5rem;
-$font-size-kilo: 4.1rem;
 $font-size-hecto: 2.25rem;
 $font-size-deca: 2rem;
 $font-size-base: 1.5rem;
-$font-size-deci: 1.2rem;
+$font-size-deci: 1.375rem;
 $font-size-centi: 1rem;
-$font-size-mili: 0.9rem;
+$font-size-mili: 0.875rem;
+$font-size-micro: 0.75rem;
+$font-size-nano: 0.625rem;
 
-$line-height-kilo: 5rem;
 $line-height-hecto: 4rem;
 $line-height-deca: 3.5rem;
 $line-height-base: 3rem;
 $line-height-deci: 2.5rem;
 $line-height-centi: 2rem;
 $line-height-mili: 1.75rem;
+$line-height-micro: 0.75rem;
+$line-height-nano: 0.625rem;
