--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -36,6 +36,9 @@ body.-white .nav-bar {
     padding-right: 1rem;
     padding-left: 1rem;
   }
+  @include bp-mediumup {
+    height: 3.75rem;
+  }
 
   &.-shadow {
     @include header-shadow;
