--- a/src/static/scss/components/_projects-list.scss
+++ b/src/static/scss/components/_projects-list.scss
@@ -5,6 +5,11 @@
 
   & > .search {
     margin-top: 2rem;
+
+    @include bp-mediumup {
+      margin-top: 0;
+      width: calc(50% - 3rem);
+    }
   }
 
   & > .list {
