--- a/src/static/scss/components/_home-section.scss
+++ b/src/static/scss/components/_home-section.scss
@@ -8,4 +8,37 @@
       margin-left: 2rem;
     }
   }
+
+  & > .hero-section {
+    @include bp-mediumup {
+      position: fixed;
+    }
+  }
+
+  & > .hero-section,
+  & > .projects-list {
+    @include bp-mediumup {
+      width: calc(50% - 2rem);
+    }
+  }
+
+  & > .projects-list {
+    @include bp-mediumup {
+      margin-left: auto;
+    }
+  }
+
+  & > .projects-list > .search {
+    @include bp-mediumup {
+      position: fixed;
+      z-index: 9;
+      margin-top: 0;
+    }
+  }
+
+  & > .projects-list > .list {
+    @include bp-mediumup {
+      margin-top: 4rem;
+    }
+  }
 }
