--- a/src/static/scss/ambience/_typography.scss
+++ b/src/static/scss/ambience/_typography.scss
@@ -10,11 +10,11 @@ $font-size-mili: 0.875rem;
 $font-size-micro: 0.75rem;
 $font-size-nano: 0.625rem;
 
-$line-height-hecto: 4rem;
-$line-height-deca: 3.5rem;
-$line-height-base: 3rem;
-$line-height-deci: 2.5rem;
-$line-height-centi: 2rem;
-$line-height-mili: 1.75rem;
-$line-height-micro: 0.75rem;
-$line-height-nano: 0.625rem;
+$line-height-hecto: 1.4;
+$line-height-deca: 1.4;
+$line-height-base: 1.6;
+$line-height-deci: 1.6;
+$line-height-centi: 1.6;
+$line-height-mili: 1.6;
+$line-height-micro: 1.6;
+$line-height-nano: 1.6;
