--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -59,11 +59,11 @@
         <div class="voting-action">
           <span class="info-text">
             <img src="{% static 'img/information.svg' %}">
-            <h4>Você foi convidado para participar nesta proposição</h4>
+            <h3>Você foi convidado para participar nesta proposição</h3>
           </span>
           <div class="actions">
-            <a href="{% url 'invitation' invite.pk 'accepted' %}" class="outline-button -green">Aceitar</a>
-            <a href="{% url 'invitation' invite.pk 'declined' %}" class="outline-button -red">Recusar</a>
+            <a href="{% url 'invitation' invite.pk 'accepted' %}" class="solid-button -green">Aceitar</a>
+            <a href="{% url 'invitation' invite.pk 'declined' %}" class="solid-button -red">Recusar</a>
           </div>
         </div>
       </div>
