--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -34,7 +34,8 @@
 
     box-sizing: border-box;
     width: 100%;
-    padding: 1.6rem;
+    height: 4rem;
+    padding: 0 1.6rem;
 
     background-color: $color-whitesmoke;
   }
@@ -56,6 +57,11 @@
     height: 2.75rem;
 
     cursor: pointer;
+
+    @include bp-mediumup {
+      width: 2rem;
+      height: 2rem;
+    }
   }
 
   & > .content {
@@ -63,10 +69,16 @@
     flex-direction: column;
     justify-content: center;
 
-    margin-top: 2rem;
-    padding: 3.2rem 1.6rem 1.6rem 1.6rem;
+    margin-top: 2.75rem;
+    padding: 1.6rem;
 
     text-align: center;
+
+    @include bp-mediumup {
+      width: 66ch;
+      margin: 0 auto;
+      margin-top: 2.75rem;
+    }
   }
 
   & > .content.-vote {
@@ -88,7 +100,7 @@
   }
 
   & > .solid-button {
-    font-size: 1.2rem;
+    font-size: $font-size-deci;
 
     margin: 0 auto;
     margin-top: 2rem;
@@ -106,22 +118,41 @@
     padding: 1.6rem;
 
     background-color: #FFF;
+
+    @include bp-mediumup {
+      padding: 2.6rem 1.6rem 1.6rem 1.6rem;
+    }
   }
 
-  & > .footer > .info-text {
+  & > .footer > .content {
+    @include bp-smallup {
+      width: 66ch;
+      margin: 0 auto;
+    }
+  }
+
+  & > .footer > .content > .info-text {
     margin-top: 0;
   }
 
-  & > .footer > .actions {
+  & > .footer > .content > .actions {
     display: flex;
     justify-content: space-between;
 
     margin-top: 1rem;
+
+    @include bp-mediumup {
+      margin-top: 2rem;
+    }
   }
 
-  & > .footer > .actions > a {
-    font-size: 1rem;
+  & > .footer > .content > .actions > a {
+    font-size: $font-size-mili;
 
-    padding: .5rem 1rem;
+    padding: .75rem 1rem;
+
+    @include bp-mediumup {
+      font-size: $font-size-centi;
+    }
   }
 }
