--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -31,7 +31,7 @@
 
     <title>{% block title %}wikilegis{% endblock title %}</title>
     {% compress css %}
-      <link rel="stylesheet" type="text/x-scss" href="{% static 'scss/app.scss' %}">
+      {# <link rel="stylesheet" type="text/x-scss" href="{% static 'scss/app.scss' %}"> #}
     {% endcompress %}
 
     {% block extracss %}
@@ -41,7 +41,10 @@
   {% if request.path|startswith:"" %}class="-home"{% endif %}>
     {% block content %}
     {% endblock content %}
+
+    {% block modal %}
     {% include "components/generic-modal.html" %}
+    {% endblock modal %}
 
     {% compress js %}
       <script src="{% static 'django_js_reverse/js/reverse.js' %}"></script>
