--- a/src/static/scss/base/_unclassed.scss
+++ b/src/static/scss/base/_unclassed.scss
@@ -55,6 +55,23 @@ body {
 
   &.-no-scroll {
     overflow: hidden;
+
+    &::before {
+      position: absolute;
+      z-index: 9;
+      top: 0;
+      left: 0;
+
+      display: block;
+
+      width: 100%;
+      height: 100%;
+
+      content: '';
+
+      opacity: .6;
+      background-color: #000;
+    }
   }
 }
 
